Add support for boolean in CLI and move ApiClient object creation later in each sub-command
