# examples/addressbook/addressbook/models/create_addressbook.py
@@ -18,7 +18,7 @@ import re  # noqa: F401
 import json
 
 
-from pydantic import BaseModel, ConfigDict, Field, StrictStr, field_validator
+from pydantic import BaseModel, ConfigDict, Field, StrictBool, StrictStr, field_validator
 from typing import Any, ClassVar, Dict, List, Optional
 from addressbook.models.person import Person
 
@@ -36,6 +36,7 @@ class CreateAddressbook(BaseModel):
     addrtype: StrictStr = Field(description="The address type, e.g. work or home")
     city: StrictStr = Field(description="The city of this address")
     country: StrictStr = Field(description="The country of this address")
+    is_valid: Optional[StrictBool] = Field(default=None, description="Address is valid or not")
     people: Optional[List[Any]] = Field(
         default=None, description="A list of people's names living there"
     )
@@ -46,6 +47,7 @@ class CreateAddressbook(BaseModel):
         "addrtype",
         "city",
         "country",
+        "is_valid",
         "people",
         "person",
         "state",
@@ -113,6 +115,7 @@ class CreateAddressbook(BaseModel):
                 "addrtype": obj.get("addrtype"),
                 "city": obj.get("city"),
                 "country": obj.get("country"),
+                "is_valid": obj.get("is_valid"),
                 "people": obj.get("people"),
                 "person": (
                     Person.from_dict(obj.get("person")) if obj.get("person") is not None else None
